<resources>
    <integer-array name="yearList">
        <item>2019</item>
        <item>2016</item>
        <item>2015</item>
    </integer-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">AutoMate New</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fuel_up">Fuel Up</string>
    <string name="car_wash">Car Wash</string>
    <string name="trip_rec">Trip Rec</string>
    <string name="speedometer">Speedometer</string>
    <string name="service">Service</string>
    <string name="trip">Trip</string>
    <string name="form_any_additional_notes">Any Additional Notes</string>
    <string name="form_add_car_wash_price">Add Car Wash Price</string>
    <string name="enter_form_location">Enter Car Wash Location</string>
    <string name="enter_current_odometer_reading">Enter Current Odometer Reading</string>
    <string name="form_set_time">Set Time</string>
    <string name="form_set_date">Set Date</string>
    <string name="select_your_car_hint">Select your Car</string>
    <string name="form_enter_no_of_litres">Enter No. of Litres</string>
    <string name="form_enter_price_per_unit">Enter Price Per Unit</string>
    <string name="form_select_fuel_type">Select Fuel Type</string>
    <string name="litres">Litres</string>
    <string name="rupees">Rupees</string>
    <string name="form_total_price">Total Price</string>
    <string name="form_select_services">Select Services</string>

    <string name="form_get_location">Get Location?</string>
    <string name="currency_unit"> RS </string>
    <string name="liquid_unit"> L </string>
    <string name="speed_unit"> Km/h </string>
    <string name="distance_unit"> Km </string>


    <string name="add_custom_car">Add Custom Car</string>

    <string name="running">Route in process…</string>

    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>

    <string name="activity_on_foot">On Foot</string>

    <string name="activity_running">Running</string>


    <string name="activity_still">Still</string>

    <string name="activity_tilting">Tilting</string>


    <!--    for drive detect-->
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>

    <string-array name="model_year">
        <item> Select Car Year</item>
        <item> 2019 </item>
        <item> 2018 </item>
        <item> 2017 </item>
        <item> 2016 </item>
        <item> 2015 </item>
        <item> 2014 </item>
        <item> 2013 </item>
        <item> 2012 </item>
        <item> 2011 </item>
        <item> 2010 </item>
        <item> 2009 </item>
        <item> 2008 </item>
        <item> 2007 </item>
        <item> 2006 </item>
        <item> 2005 </item>
        <item> 2004 </item>
        <item> 2003 </item>
        <item> 2002 </item>
        <item> 2001 </item>
        <item> 2000 </item>
        <item> 1999 </item>
        <item> 1998 </item>
        <item> 1997 </item>
        <item> 1996 </item>
        <item> 1995 </item>
        <item> 1994 </item>
        <item> 1993 </item>
        <item> 1992 </item>
        <item> 1991 </item>
        <item> 1990 </item>
    </string-array>

    <string-array name="makeList">
        <item>Suzuki</item>
        <item>Toyota</item>
        <item>Honda</item>
    </string-array>


    <string-array name="modelList">
        <item>WagonR</item>
        <item>Accord</item>
        <item>Civic</item>
    </string-array>

    <string-array name="service_list">
        <item>Check Battery and Contacts</item>
        <item>Check Exhaust System</item>
        <item>Check Lubrication System</item>
        <item>Check/Change Spark Plugs</item>
        <item>Clean/Wash</item>
        <item>Check and Replace Wiper Blades</item>
        <item>Check/Change Lights</item>
        <item>Professional Detailing</item>
        <item>Wax/Polish</item>
        <item>Check Automatic Transmission Fluid</item>
        <item>Check Brake Fluid</item>
        <item>Check/Change Cabin Air Filter</item>
        <item>Check/Add Radiator Coolant[AntiFreeze]</item>
        <item>Check/Change Engine Air Filter</item>
        <item>Check/Add Engine Oil</item>
        <item>Check/Change Engine Oil</item>
        <item>Check/Check/Change Fuel Filter</item>
        <item>Check/Change Power Steering Fluid</item>
        <item>Check/Change Transmission Fluid</item>
        <item>Check/Add Wiper Fluid</item>
        <item>Check/Change Belts[Alternator , Serpentine , Timing, etc.]</item>
        <item>Check/Change Brake Hoses</item>
        <item>Check/Change Power Steering Hoses</item>
        <item>Check/Change Vacuum Hoses</item>
        <item>Clean/Protect</item>
        <item>Professional Detailing</item>
        <item>Monitor Dashboard Lights</item>
        <item>Check Allignment</item>
        <item>Check and Adjust Tire Pressure</item>
        <item>Check/Replace Brake Pads</item>
        <item>Check Tire Condition/Tread</item>
        <item>Check/Inspect Suspension System</item>
        <item>Rotate and Balance Tires</item>
    </string-array>
    <string-array name="parts_categories">
        <item>Oil and Oil Filter</item>
        <item>Windshield Wiper Blades</item>
        <item>Air Filter</item>
        <item>Brake Pads</item>
        <item>Battery</item>
        <item>Headlights and/or taillight bulbs</item>
        <item>Tires</item>
        <item>Spark Plugs</item>
        <item>Belts</item>
        <item>Alternator</item>
        <item>Fuel Pump</item>
        <item>Water pump</item>
        <item>Muffler</item>
    </string-array>
    <string-array name="otherexpenses_categories">
        <item>Car Insurance</item>
        <item>Tracker Navigation</item>
        <item>Installments</item>
        <item>Annual Registration</item>
        <item>Tolls</item>
    </string-array>
    <string-array name="lifetime_categories">
        <item>weeks</item>
        <item>month</item>
        <item>year</item>
    </string-array>
    <string-array name="calendar_list">
        <item> Months </item>
        <item> Days </item>
        <item> Years </item>
    </string-array>
</resources>
