<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_additional_note"
                    style="@style/EditText_In_Forms"
                    android:drawableLeft="@drawable/automate_additional_notes_form_icon"
                    android:hint="Any Additional Notes"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_fuelup_location" />

                <EditText
                    android:id="@+id/et_odometer_reading"
                    style="@style/EditText_In_Forms"
                    android:drawableLeft="@drawable/automate_odometer_reading_form_icon"
                    android:hint="Enter Current Odometer Reading"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@id/tv_fuel_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_fuelup_time" />

                <EditText
                    android:id="@+id/tv_fuelup_location"
                    style="@style/EditText_In_Forms"
                    android:drawableLeft="@drawable/automate_location_form_icon"
                    android:hint="@string/enter_form_location"
                    app:layout_constraintBottom_toTopOf="@id/et_additional_note"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_fuelup_cost" />

                <EditText
                    android:id="@+id/et_fuelup_cost"
                    style="@style/EditText_In_Forms"
                    android:autofillHints="Add Car Wash Price"
                    android:drawableLeft="@drawable/automate_price_form_icon"
                    android:hint="@string/form_total_price"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@id/tv_fuelup_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_no_of_litre" />

                <EditText
                    android:id="@+id/et_price_per_unit"
                    style="@style/EditText_In_Forms"
                    android:drawableStart="@drawable/automate_unit_price_form_icon"
                    android:hint="@string/form_enter_price_per_unit"
                    android:paddingEnd="30dp"
                    app:layout_constraintBottom_toTopOf="@id/et_no_of_litre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_fuel_type" />

                <EditText
                    android:id="@+id/et_no_of_litre"
                    style="@style/EditText_In_Forms"
                    android:drawableStart="@drawable/automate_number_of_liters_form_icon"
                    android:hint="@string/form_enter_no_of_litres"
                    android:paddingEnd="30dp"
                    app:layout_constraintBottom_toTopOf="@id/et_fuelup_cost"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_price_per_unit" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/automate_fuel_up_form_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_fuelup_date"
                    android:layout_width="0dp"
                    style="@style/EditText_In_Forms"
                    android:drawableLeft="@drawable/automate_set_date_form_icon"
                    android:hint="Set Date"
                    app:layout_constraintBottom_toTopOf="@id/et_odometer_reading"
                    app:layout_constraintEnd_toStartOf="@id/tv_fuelup_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_car_selection" />

                <TextView
                    android:id="@+id/tv_fuelup_time"
                    android:layout_width="0dp"
                    style="@style/EditText_In_Forms"
                    android:drawableLeft="@drawable/automate_set_time_form_icon"
                    android:hint="Set Time"
                    app:layout_constraintBottom_toTopOf="@id/et_odometer_reading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_fuelup_date"
                    app:layout_constraintTop_toBottomOf="@id/et_car_selection" />

                <TextView
                    android:id="@+id/et_car_selection"
                    style="@style/EditText_In_Forms"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:drawableLeft="@drawable/automate_select_car_placeholder"
                    android:drawableRight="@drawable/automate_dropdown_icon"
                    android:hint="Select Your Car"
                    app:layout_constraintBottom_toTopOf="@id/tv_fuelup_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_selectcar" />

                <TextView
                    android:id="@+id/tv_fuel_type"
                    style="@style/EditText_In_Forms"
                    android:drawableLeft="@drawable/automate_fuel_type_form_icon"
                    android:hint="@string/form_select_fuel_type"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_odometer_reading" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/litres"
                    android:textAllCaps="true"
                    android:textColor="@color/blueDark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/et_no_of_litre"
                    app:layout_constraintEnd_toEndOf="@id/et_no_of_litre"
                    app:layout_constraintTop_toTopOf="@id/et_no_of_litre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/rupees"
                    android:textAllCaps="true"
                    android:textColor="@color/blueDark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/et_price_per_unit"
                    app:layout_constraintEnd_toEndOf="@id/et_price_per_unit"
                    app:layout_constraintTop_toTopOf="@id/et_price_per_unit" />

                <TextView
                    android:id="@+id/tv_fuelup_get_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="Get Location?"
                    android:textColor="@color/blueDark"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_fuelup_location"
                    app:layout_constraintEnd_toEndOf="@id/tv_fuelup_location"
                    app:layout_constraintTop_toTopOf="@id/tv_fuelup_location" />

                <TextView
                    android:id="@+id/tv_selectcar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="Select your Car"
                    app:layout_constraintBottom_toTopOf="@id/et_car_selection"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/main_app_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_carwash_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:src="@drawable/automate_back_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_save_fuelup_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/automate_done_form_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="Fuel Up"
                android:textAllCaps="true"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_save_fuelup_data"
                app:layout_constraintStart_toEndOf="@id/iv_carwash_back"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>